# agentic-home-network

./: .env.example  .gitignore  LICENSE  README.md  agentic-home-netops-plan.md  pyproject.toml
.cursor/: mcp.json.example
agent/: actuator.py  analyzer.py  config.py  graph.py  policies.py  prompts.py  run.py  schemas.py  security.py
baseline/: known_devices.yaml.example  normal_profile.json
evals/: rubric.md  run_evals.py
evals/scenarios/: critical_wan_outage.json  gateway_down.json  healthy_baseline.json  lan_degraded_wifi.json  mixed_healthy_and_down.json  multiple_unknown_devices.json  perf_and_security_combined.json  security_clear_known_lan.json  unknown_iot_device.json  unknown_laptop.json  wan_degraded_latency.json  wan_packet_loss.json  wan_unreachable.json
mcp_servers/: actuator.py  device_inventory.py  flow_monitor.py  perf_probe.py
probes/: device_baseline.py  device_identity.py  discover_cli.py  latency.py  ssh_runner.py
scripts/: demo.sh  mcp_smoke_test.py  record-demo.sh
